--- a/css/structure/jquery.mobile.headerfooter.css
+++ b/css/structure/jquery.mobile.headerfooter.css
@@ -1,6 +1,7 @@
 /* fixed page header & footer configuration */
 .ui-header, .ui-footer, .ui-page-fullscreen .ui-header, .ui-page-fullscreen .ui-footer  { position: absolute;  overflow: hidden; width: 100%; border-left-width: 0; border-right-width: 0; }
-.ui-page .ui-header-fixed { top: 0px; position: fixed; }
-.ui-page .ui-footer-fixed { bottom: 0px; position: fixed; }
+.ui-page .ui-header-fixed { top: 0px; position: fixed; z-index: 1000; }
+.ui-page .ui-footer-fixed { bottom: 0px; position: fixed; z-index: 1000; }
+
 .ui-footer-duplicate, .ui-page-fullscreen .ui-fixed-inline { display: none; }
 .ui-page-fullscreen .ui-header, .ui-page-fullscreen .ui-footer { opacity: .9; }
